# DataFoundry

./: README.md  pyproject.toml
python/dataforge/: README.md  hf_executor.py  pipeline.py
src/: lib.rs
tests/: test_hf_exec.py  test_non_hf_ds.py  test_pipeline.py
